<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hockey Rule Finder</string>

    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_rule_detail">MainActivity</string>
    <string name="title_activity_rule_list">MainActivity</string>
    <string name="title_activity_browse">BrowseActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_hrf">HRFActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_single_image">SingleImageActivity</string>
    <string name="title_activity_single_official">SingleOfficialActivity</string>
    <string name="title_activity_quick_reference">QuickReferenceActivity</string>

    <string name="title_section0">Quick Reference</string>
    <string name="title_section1">Browse</string>
    <string name="title_section2">Search</string>
    <string name="title_section3">Officials List</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string name="search_hint">Enter search term…</string>
    <string name="search_zero_results">No Results Found</string>
    <string name="officialNum3585">Jersey numbers 35 and 85 are reserved numbers that are used in emergency situations. Each rink has a set of equipment with these numbers in case the need arises. Reasons may include lost baggage during travel or equipment damaged during the course of a game.</string>



    <!-- All static text here, user will always see these. -->
    <string name="enable_dark_theme">Use dark theme</string>

    <string name="header_jersey_number">Jersey Number</string>
    <string name="header_league">League</string>
    <string name="header_member_since">NHLOA Member Since</string>
    <string name="header_reg_season_games">Regular Season Games</string>
    <string name="header_first_reg_season">First Regular Season</string>
    <string name="header_first_reg_season_game">First Regular Season Game</string>
    <string name="header_playoff_games">Playoff Games</string>
    <string name="header_first_playoff_season">First Playoff Season</string>
    <string name="header_first_playoff_game">First Playoff Game</string>

    <string name="content_desc_rule_detail">An image contained in the rulebook that is referenced by the rule text.</string>
    <string name="content_desc_official_image">A picture of this hockey official.</string>
    <string name="content_desc_quickref_image">An example official demonstrating the specific call for the penalty.</string>
    <string name="content_desc_magnify">A magnifying glass indicating that this image can be clicked to see additional detail.</string>

    <string name="header_rule_id">Rule #</string>
    <string name="header_section">Sec:  </string>

    <string name="diagram_detail_header">Diagram Detail</string>

    <!--
        All the placeholders here. None of these will be displayed to the user,
        they are just for appearance sake in the preview window.
     -->
    <string name="placeholder_rule_title">Rule Title</string>
    <string name="placeholder_rule_text">Rule Text</string>
    <string name="placeholder_rule_id_plain">0.0</string>

    <string name="placeholder_rule_id_label">Rule 0.0</string>

    <string name="placeholder_section_title">Section Title</string>
    <string name="placeholder_section_id_label">Section 0.0</string>

    <string name="placeholder_official_number">00</string>
    <string name="placeholder_official_name">John Smith</string>
    <string name="placeholder_official_league">NHL</string>

    <string name="placeholder_quickref_desc">Description</string>
    <string name="placeholder_official_member_since">1/1/2000</string>
    <string name="placeholder_official_games">000</string>
    <string name="placeholder_official_season">2000/2001</string>
    <string name="placeholder_official_first_game">BOSTON @ MONTREAL - 1/1/2000</string>
    <!-- End placeholders here -->
</resources>
