<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/singleOfficialFragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/officialContainer">

            <ImageView  xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/officialImageView"
                android:paddingTop="10dp"
                android:contentDescription="@string/content_desc_official_image" >
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_official_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_below="@+id/officialImageView"
                android:id="@+id/officialNameTxt"
                android:paddingTop="15dp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_jersey_number"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/officialNameTxt"
                android:id="@+id/headerJersey"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="?attr/sliderBorderDrawable" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_official_number"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/headerJersey"
                android:id="@+id/txtJersey"
                android:paddingTop="0dp"
                android:paddingLeft="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_league"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/txtJersey"
                android:id="@+id/headerLeague"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="?attr/sliderBorderDrawable" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_official_league"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/headerLeague"
                android:id="@+id/txtLeague"
                android:paddingTop="0dp"
                android:paddingLeft="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_member_since"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/txtLeague"
                android:id="@+id/headerMemberSince"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="?attr/sliderBorderDrawable" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_official_member_since"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/headerMemberSince"
                android:id="@+id/txtMemberSince"
                android:paddingTop="0dp"
                android:paddingLeft="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_reg_season_games"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/txtMemberSince"
                android:id="@+id/headerRegularSeasonGames"
                android:paddingTop="25dp"
                android:paddingLeft="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="?attr/sliderBorderDrawable"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_official_games"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/headerRegularSeasonGames"
                android:id="@+id/txtRegularSeasonGames"
                android:paddingTop="0dp"
                android:paddingLeft="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_first_reg_season"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/txtRegularSeasonGames"
                android:id="@+id/headerFirstRegularSeason"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="?attr/sliderBorderDrawable"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_official_season"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/headerFirstRegularSeason"
                android:id="@+id/txtFirstRegularSeason"
                android:paddingTop="0dp"
                android:paddingLeft="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_first_reg_season_game"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/txtFirstRegularSeason"
                android:id="@+id/headerFirstRegularSeasonGame"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="?attr/sliderBorderDrawable"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_official_first_game"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/headerFirstRegularSeasonGame"
                android:id="@+id/txtFirstRegularSeasonGame"
                android:paddingTop="0dp"
                android:paddingLeft="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_playoff_games"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/txtFirstRegularSeasonGame"
                android:id="@+id/headerPlayoffGames"
                android:paddingTop="25dp"
                android:paddingLeft="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="?attr/sliderBorderDrawable"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_official_games"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/headerPlayoffGames"
                android:id="@+id/txtPlayoffGames"
                android:paddingTop="0dp"
                android:paddingLeft="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_first_playoff_season"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/txtPlayoffGames"
                android:id="@+id/headerFirstPlayoffSeason"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="?attr/sliderBorderDrawable"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_official_season"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/headerFirstPlayoffSeason"
                android:id="@+id/txtFirstPlayoffSeason"
                android:paddingTop="0dp"
                android:paddingLeft="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_first_playoff_game"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/txtFirstPlayoffSeason"
                android:id="@+id/headerFirstPlayoffGame"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="?attr/sliderBorderDrawable"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_official_first_game"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/headerFirstPlayoffGame"
                android:id="@+id/txtFirstPlayoffGame"
                android:paddingTop="0dp"
                android:paddingLeft="5dp"
                android:paddingBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/officialNum3585"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/officialPlaceholderText"
            android:paddingTop="15dp"
            android:layout_marginLeft="15dp"
            android:visibility="gone"/>
        </LinearLayout>
</ScrollView>


